@@ -2430,3 +2430,4 @@ seen. gmtime warning still there
 - Added HOOKTYPE_REMOTE_QUIT
 - Added beta18 release notes (might be changed)
 - Added HOOKTYPE_REHASHFLAG (triggered when /rehash is passed a flag)
+- Fix for HOOKTYPE_REMOTE_QUIT (was called for local quits too)
